[package]
name = "lune"
version = "0.1.0"
edition = "2021"

[lib]
name = "lune"
path = "src/lib.rs"

[[bin]]
name = "lune"
path = "src/main.rs"

[dependencies]
thiserror = "1"

reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"] }
